// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addHistoricalEventsExportCapabilityV2() exportHistoricalEvents() calls exportEvents and logs with fetched events 1`] = `
Array [
  Array [
    Object {
      "category": "exportEvents",
      "jobId": "1",
      "pluginConfigId": 39,
      "successes": 3,
      "successesOnRetry": 0,
      "teamId": 2,
    },
  ],
]
`;

exports[`addHistoricalEventsExportCapabilityV2() exportHistoricalEvents() stops processing after HISTORICAL_EXPORTS_MAX_RETRY_COUNT retries 1`] = `
Array [
  Array [
    Object {
      "category": "exportEvents",
      "failures": 3,
      "jobId": "1",
      "pluginConfigId": 39,
      "teamId": 2,
    },
    Object {
      "error": [RetryError: Retry error],
      "eventCount": 3,
    },
  ],
]
`;

exports[`addHistoricalEventsExportCapabilityV2() exportHistoricalEvents() stops processing date if an unknown error was raised in exportEvents 1`] = `
Array [
  Array [
    Object {
      "category": "exportEvents",
      "failures": 3,
      "jobId": "1",
      "pluginConfigId": 39,
      "teamId": 2,
    },
    Object {
      "error": [Error: Unknown error],
      "eventCount": 3,
    },
  ],
]
`;
